[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awspub"
version = "0.1.0"
description = "Publish images to AWS EC2"

license = "Apache-2.0"

authors = [
    "Thomas Bechtold <thomasbechtold@jpberlin.de>"
]

repository = "https://github.com/toabctl/awspub"
homepage = "https://github.com/toabctl/awspub"
readme = ["LICENSE"]
keywords = ["AWS", "EC2", "publication"]


[tool.poetry.dependencies]
python = "^3.9"
boto3 = "*"
pydantic = "^2"
boto3-stubs = {extras = ["essential", "marketplace-catalog", "ssm"], version = "^1.28.83"}
autodoc-pydantic = "^2.0.1"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "*"
black = "*"
pytest = "*"
coverage = "^7.4.1"

[tool.poetry.group.type]
optional = true

[tool.poetry.group.type.dependencies]
mypy = "*"
pytest = "*"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "*"
pydantic-settings = "*"
autodoc_pydantic = "*"


[tool.poetry.scripts]
awspub = "awspub.cli:main"
