[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "awspub"
version = "0.0.0"
description = "Publish images to AWS EC2"

license = "GPL-3.0-or-later"

authors = [
    "Thomas Bechtold <thomasbechtold@jpberlin.de>"
]

repository = "https://github.com/canonical/awspub"
homepage = "https://github.com/canonical/awspub"
readme = ["readme.rst"]
keywords = ["AWS", "EC2", "publication"]


[tool.poetry.dependencies]
# use 3.8.1 instead of 3.8 to get a new flake8 version which fixes problems with false positive on python 3.12
python = "^3.8.1"
boto3 = "*"
pydantic = "^2"
boto3-stubs = {extras = ["essential", "marketplace-catalog", "ssm", "s3", "sns", "sts"], version = "^1.28.83"}
autodoc-pydantic = "^2.0.1"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = "*"
black = "*"
pytest = "*"
coverage = "^7.4.1"
isort = "^5.13.2"

[tool.poetry.group.type]
optional = true

[tool.poetry.group.type.dependencies]
mypy = "*"
pytest = "*"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "*"
pydantic-settings = "*"
autodoc_pydantic = "*"


[tool.poetry.scripts]
awspub = "awspub.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = 'git'
